Sutter Health/src/objects/Request_for_Information__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Information_Received__c</fullName>
        <label>Date Information Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Information_Requested__c</fullName>
        <label>Date Information Requested</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Request for Information</relationshipLabel>
        <relationshipName>Request_for_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Request for Information</label>
    <nameField>
        <displayFormat>RFI-{00000000}</displayFormat>
        <label>Request for Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request for Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Information_Received</fullName>
        <active>true</active>
        <description>The “Date Information Received” field can’t be set to a future date, it has to be before the current time</description>
        <errorConditionFormula>Date_Information_Received__c &gt;= NOW()</errorConditionFormula>
        <errorDisplayField>Date_Information_Received__c</errorDisplayField>
        <errorMessage>The Date Information Received can’t be set to a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Information_Requested</fullName>
        <active>true</active>
        <description>The “Date Information Requested” field can’t be set to a future date, it has to be before the current time</description>
        <errorConditionFormula>Date_Information_Requested__c &gt;= NOW()</errorConditionFormula>
        <errorDisplayField>Date_Information_Requested__c</errorDisplayField>
        <errorMessage>The Date Information Requested can’t be set to a future date.</errorMessage>
    </validationRules>
</CustomObject>